Mon Jul 13 22:49:50 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/prime.rb (Prime#prime_division): now decomposes
	  negative integer into a decomposition with element [-1, 1].

	* test/test_prime.rb: test for it.

Mon Jul 13 22:28:03 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (pipe_open): handles leaked on win32 when an error occurs.

Mon Jul 13 20:21:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (r_object0): should not shadow outer variable not to
	  return Qnil always.

Mon Jul 13 19:41:05 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* marshal.c (r_object0): copy instance variables to new regexp.

Mon Jul 13 17:49:11 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h, compile.c: declare struct iseq_inline_cache_entry.
	  Inline cache (IC) entries are no longer GC managed object.
	  IC entries are freed when ISeq is freed.

	* iseq.c: fix mark, free, memsize functions for above change.

	* insns.def: remove rb_gc_write_barrier().

	* vm_insnhelper.c (vm_method_search): ditto.

	* tool/instruction.rb, template/insns_info.inc.tmpl (insn_iclen):
	  added.

Mon Jul 13 13:35:08 2009  Koichi Sasada  <ko1@atdot.net>

	* insns.def, vm_insnhelper.c (getinstancevariable):
	  fix to use inline cache.

	* compile.c: fix to skip inline cache entry (IC).  IC is added
	  automatically by compiler.

	* insns.def, vm_insnhelper.h: fix IC positions.

	* iseq.c: increment minor_version of ISeq because of above change.

Mon Jul 13 08:01:00 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: New strategy for searching Tcl/Tk libraries.

	* ext/tk/*: Support new features of Tcl/Tk8.6b1 and minor bug fixes.
	     ( [KNOWN BUG] Ruby/Tk on Ruby 1.9 will not work on Cygwin. )

	* ext/tk/*: Unify sources between Ruby 1.8 & 1.9.
	            Improve default_widget_set handling.

	* ext/tk/*: Multi-TkInterpreter (multi-tk.rb) works on Ruby 1.8 & 1.9.
	     ( [KNOWN BUG] On Ruby 1.8, join to a long term Thread on Tk