@@ -1,4 +1,5 @@
 require 'test/unit'
+require 'envutil.rb'
 
 class TestCase < Test::Unit::TestCase
   def test_case
@@ -45,5 +46,15 @@ class TestCase < Test::Unit::TestCase
     else
       assert(false)
     end
+  end
+
+  def test_deoptimization
+    assert_in_out_err(['-e', <<-EOS], '', %w[42], [])
+      class Symbol; def ===(o); p 42; true; end; end; case :foo; when :foo; end
+    EOS
+
+    assert_in_out_err(['-e', <<-EOS], '', %w[42], [])
+      class Fixnum; def ===(o); p 42; true; end; end; case 1; when 1; end
+    EOS
   end
 end
